header and banner complete desktop view

--- a/index.html
+++ b/index.html
@@ -4,6 +4,117 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <style>
+      @font-face {
+        font-weight: 400;
+        font-style: normal;
+        font-family: "Circular-Loom";
+
+        src: url("https://cdn.loom.com/assets/fonts/circular/CircularXXWeb-Book-cd7d2bcec649b1243839a15d5eb8f0a3.woff2")
+          format("woff2");
+      }
+
+      @font-face {
+        font-weight: 500;
+        font-style: normal;
+        font-family: "Circular-Loom";
+
+        src: url("https://cdn.loom.com/assets/fonts/circular/CircularXXWeb-Medium-d74eac43c78bd5852478998ce63dceb3.woff2")
+          format("woff2");
+      }
+
+      @font-face {
+        font-weight: 700;
+        font-style: normal;
+        font-family: "Circular-Loom";
+
+        src: url("https://cdn.loom.com/assets/fonts/circular/CircularXXWeb-Bold-83b8ceaf77f49c7cffa44107561909e4.woff2")
+          format("woff2");
+      }
+
+      @font-face {
+        font-weight: 900;
+        font-style: normal;
+        font-family: "Circular-Loom";
+
+        src: url("https://cdn.loom.com/assets/fonts/circular/CircularXXWeb-Black-bf067ecb8aa777ceb6df7d72226febca.woff2")
+          format("woff2");
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="top-header">
+        <div class="container top-header-container">
+          <div class="top-header-left-col">
+            <span>phone: +01 123 456 789</span>
+            <span>email: info@eiser.com</span>
+          </div>
+          <div class="top-header-right-col">
+            <span>gift card</span>
+            <span>track order</span>
+            <span>language</span>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <nav>
+          <a href="#" class="logo">
+            <img src="assets/logo.png" alt="logo" />
+          </a>
+          <ul>
+            <li><a href="#"> home</a></li>
+            <li><a href="#"> about</a></li>
+            <li><a href="#"> services</a></li>
+            <li><a href="#"> projects</a></li>
+            <li><a href="#"> blog</a></li>
+            <li><a href="#"> contact</a></li>
+          </ul>
+          <div class="navbar-right">
+            <div class="input-search">
+              <input type="text" />
+              <i class="fa fa-search search"></i>
+            </div>
+            <a href="#">
+              <span>1</span>
+              <i class="fa fa-shopping-cart"></i>
+            </a>
+            <a href="#">
+              <span>19</span>
+              <i class="fa fa-heart-o"></i>
+            </a>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <section class="banner">
+      <div class="container-fluid banner-container">
+        <div class="banner-row">
+          <div class="banner-description-container">
+            <div class="banner-description">
+              <p>ultimate collection</p>
+              <h1>Complete Woman Fashion Here</h1>
+              <button>shop now</button>
+            </div>
+          </div>
+          <div class="banner-img-container">
+            <div class="banner-img">
+              <img src="assets/ban-1.png" alt="banner-1" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
