--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <li><a href="#"> blog</a></li>
             <li><a href="#"> contact</a></li>
           </ul>
+          <a href="#" class="mobile-menu-icon"><i class="fa fa-bars"></i></a>
           <div class="navbar-right">
             <div class="input-search">
               <input type="text" />
@@ -613,5 +614,11 @@
         </p>
       </div>
     </footer>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
